# -zzz-autopilot-

./: .gitignore  .mcp.json  CLAUDE.md  TODO.md  pyproject.toml  start.ps1
config/: agent_config.yml
config/game_knowledge/: knowledge_config.yml
config/game_knowledge/core/: characters.yml  daily_tasks.yml  stamina.yml
docs/: acceptance_criteria.md
src/zzz_agent/: __init__.py  main.py
src/zzz_agent/goals/: manager.py
src/zzz_agent/intervention/: patches.py  queue.py
src/zzz_agent/knowledge/: rag.py  service.py
src/zzz_agent/planning/: store.py
src/zzz_agent/server/: context.py  event_stream.py  mcp_server.py
src/zzz_agent/state/: extractor.py
src/zzz_agent/tools/: analysis.py  dispatch.py  goals.py  input.py  knowledge.py  navigation.py  perception.py  planning.py
tests/: test_app_level_tools.py  test_event_stream.py  test_goals.py  test_intervention.py  test_knowledge.py  test_planning.py  test_runtime_guards.py  test_state_extractor.py
