[project]
name = "zzz-agent"
version = "0.1.0"
description = "AI Agent MCP Server for ZenlessZoneZero-OneDragon"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mcp[cli]>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Framework runtime deps (from ZenlessZoneZero-OneDragon pyproject.toml)
    "pyside6==6.8.0.2; sys_platform == 'win32'",
    "pyyaml>=6.0",
    "opencv-python==4.10.0.84",
    "pyautogui==0.9.54; sys_platform == 'win32'",
    "pynput==1.7.7",
    "onnxruntime-directml==1.18.0; sys_platform == 'win32'",
    "mss==9.0.1",
    "shapely==2.0.4",
    "pyclipper==1.3.0.post5",
    "soundcard==0.4.3; sys_platform == 'win32'",
    "librosa==0.10.2.post1",
    "gensim==4.3.3",
    "pygit2==1.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zzz_agent"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["zzz_agent"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
